--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,8 @@
+@import url("AdviceGeneratorCard.css");
+@import url("button.css");
+@import url("fonts.css");
+@import url("button.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
