Setting up GitHub pages
Installing GitHub pages package to deploy website to live URL.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -31,3 +31,9 @@ body {
   font-family: "Manrope", sans-serif;
   background-color: var(--clr-dark-blue);
 }
+
+@media screen and (max-width: 40em) {
+  body {
+    /*padding: 0 0.5rem 0 0.5rem;*/
+  }
+}
